--- a/index.html
+++ b/index.html
@@ -28,31 +28,26 @@
       font-family: 'Poppins', sans-serif;
       white-space: pre-wrap;
     }
-    canvas {
-      display: block;
-    }
     #botonInicio {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+      padding: 15px 30px;
+      font-size: 20px;
+      font-weight: bold;
       background-color: #ff4da6;
       color: white;
-      font-size: 24px;
-      padding: 15px 30px;
       border: none;
       border-radius: 10px;
       cursor: pointer;
-      z-index: 10;
+      z-index: 1000;
+    }
+    canvas {
+      display: block;
     }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
-</head>
-<body>
-  <button id="botonInicio">Empezar</button>
-  <div id="scrollContainer">
-    <div id="dedicatoria"></div>
-  </div>
   <script>
     let frases = ["Hola Yareni ;)", "Feliz cumpleaños"];
     let clickCount = 0;
@@ -60,6 +55,8 @@
     let gotas = [];
     let mostrarDedicatoria = false;
     let mensajeFinalizado = false;
+    let cancion;
+    let boton;
 
     let textoBase = "Hola Yareni ;) ... Que tal, espero que estés bien ... Hace unos meses que no nos vemos pero en fin, sé que no nos conocemos muy bien que digamos y solo hablamos un par de veces pero en ese poco tiempo me agradaste bastante de verdad ... Y bueno jajaja ... Espero te haya gustado el código que te hice :) ... Se te quiere Se te extraña ... Jajaja ... Bueno la verdad sí se te extraña, ojalá tener la oportunidad de conocernos más muy pronto ... Atte Caleb ... Por cierto hace mucho que no hacía una carta o algo de ese estilo ...";
     let textoVisible = "";
@@ -71,7 +68,6 @@
     let borrarHasta = null;
     let esperando = false;
     let tiempoEspera = 0;
-    let finalizado = false;
     let borrandoFinal = false;
     let coloresTexto = ["#ff8080", "#ff4da6", "#ff00ff"]; // Rosa, fucsia, violeta
 
@@ -80,11 +76,8 @@
       { texto: "Se te extraña", borrado: false }
     ];
 
-    let cancion;
-
     function preload() {
-      soundFormats('mp3');
-      cancion = loadSound("A-ha - Take On Me (Acoustic)  Subtitulada al Español.mp3");
+      cancion = loadSound("take-on-me.mp3");
     }
 
     function setup() {
@@ -92,12 +85,18 @@
       textSize(26);
       textAlign(CENTER, CENTER);
       textFont('Poppins');
-      cancion.setVolume(0.5);
 
-      document.getElementById("botonInicio").addEventListener("click", () => {
+      boton = createButton("Empezar");
+      boton.id("botonInicio");
+      boton.mousePressed(iniciarTodo);
+      document.body.appendChild(boton.elt);
+    }
+
+    function iniciarTodo() {
+      if (!cancion.isPlaying()) {
         cancion.loop();
-        document.getElementById("botonInicio").style.display = "none";
-      });
+      }
+      boton.remove();
     }
 
     function windowResized() {
@@ -138,12 +137,12 @@
     function draw() {
       background(0, 100);
 
-      // Contador
       fill(255);
       textSize(20);
       textAlign(LEFT, TOP);
       text("Clics: " + clickCount, 20, 20);
 
+      // Lluvia
       if (!mostrarDedicatoria) {
         textAlign(CENTER, CENTER);
         textSize(24);
@@ -236,5 +235,10 @@
       }
     }
   </script>
+</head>
+<body>
+  <div id="scrollContainer">
+    <div id="dedicatoria"></div>
+  </div>
 </body>
 </html>
