--- a/index.html
+++ b/index.html
@@ -30,11 +30,42 @@
     canvas {
       display: block;
     }
+    #startScreen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: black;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+    }
+    #startButton {
+      padding: 20px 40px;
+      font-size: 24px;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+      border-radius: 12px;
+      color: white;
+      background: linear-gradient(45deg, #ff80ff, #ff4da6, #ff00ff);
+      background-size: 300% 300%;
+      animation: shimmer 3s infinite;
+    }
+    @keyframes shimmer {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
 </head>
 <body>
-  <audio id="bgMusic" src="take-on-me.mp3" preload="auto"></audio>
+  <div id="startScreen">
+    <button id="startButton">EMPEZAR</button>
+  </div>
   <div id="scrollContainer">
     <div id="dedicatoria"></div>
   </div>
@@ -45,7 +76,7 @@
     let gotas = [];
     let mostrarDedicatoria = false;
     let mensajeFinalizado = false;
-    let musicaIniciada = false;
+    let musica;
 
     let textoBase = "Hola Yareni ;) ... Que tal, espero que estés bien ... Hace unos meses que no nos vemos pero en fin, sé que no nos conocemos muy bien que digamos y solo hablamos un par de veces pero en ese poco tiempo me agradaste bastante de verdad ... Y bueno jajaja ... Espero te haya gustado el código que te hice :) ... Se te quiere Se te extraña ... Jajaja ... Bueno la verdad sí se te extraña, ojalá tener la oportunidad de conocernos más muy pronto ... Atte Caleb ... Por cierto hace mucho que no hacía una carta o algo de ese estilo ...";
     let textoVisible = "";
@@ -54,11 +85,12 @@
     let velocidadEscritura = 100;
     let borrando = false;
     let borrarDesde = null;
+    let borrarHasta = null;
     let esperando = false;
     let tiempoEspera = 0;
+    let finalizado = false;
     let borrandoFinal = false;
-    let mensajeTerminado = false;
-    let coloresTexto = ["#ff8080", "#ff4da6", "#ff00ff"]; // Rosa, fucsia, violeta
+    let coloresTexto = ["#ff8080", "#ff4da6", "#ff00ff"];
 
     let partesABorrar = [
       { texto: "Se te quiere", borrado: false },
@@ -66,26 +98,42 @@
     ];
 
     let particulas = [];
+    let iniciado = false;
+
+    function preload() {
+      musica = loadSound("take-on-me.mp3");
+    }
 
     function setup() {
       createCanvas(windowWidth, windowHeight);
       textSize(26);
       textAlign(CENTER, CENTER);
       textFont('Poppins');
+      for (let i = 0; i < 100; i++) {
+        particulas.push({
+          x: random(width),
+          y: random(height),
+          r: random(2, 4),
+          speed: random(0.5, 2),
+          color: random(coloresTexto)
+        });
+      }
+      noLoop();
     }
+
+    document.getElementById("startButton").addEventListener("click", () => {
+      document.getElementById("startScreen").style.display = "none";
+      musica.loop();
+      iniciado = true;
+      loop();
+    });
 
     function windowResized() {
       resizeCanvas(windowWidth, windowHeight);
     }
 
     function mousePressed() {
-      if (!musicaIniciada) {
-        let audio = document.getElementById("bgMusic");
-        audio.play();
-        musicaIniciada = true;
-      }
-
-      if (!mostrarDedicatoria) {
+      if (!mostrarDedicatoria && iniciado) {
         clickCount++;
         if (clickCount % 2 === 0) {
           fraseIndex = (fraseIndex + 1) % frases.length;
@@ -96,7 +144,6 @@
         if (clickCount >= 30) {
           mostrarDedicatoria = true;
           document.getElementById("scrollContainer").style.pointerEvents = "auto";
-          crearParticulas();
         }
 
         for (let i = 0; i < 20; i++) {
@@ -115,50 +162,31 @@
       }
     }
 
-    function crearParticulas() {
-      for (let i = 0; i < 100; i++) {
-        particulas.push({
-          x: random(width),
-          y: random(height),
-          dx: random(-0.3, 0.3),
-          dy: random(-0.3, 0.3),
-          size: random(2, 4),
-          alpha: random(150, 255),
-          color: random(coloresTexto)
-        });
-      }
-    }
-
-    function moverYdibujarParticulas() {
-      for (let p of particulas) {
-        p.x += p.dx;
-        p.y += p.dy;
-
-        if (p.x < 0 || p.x > width) p.dx *= -1;
-        if (p.y < 0 || p.y > height) p.dy *= -1;
-
-        fill(p.color + hex(p.alpha, 2));
-        noStroke();
-        ellipse(p.x, p.y, p.size);
-      }
-    }
-
     function draw() {
-      background(0, 100);
+      background(0);
 
-      // Fondo de partículas si estamos en dedicatoria
-      if (mostrarDedicatoria) {
-        moverYdibujarParticulas();
+      // Fondo de partículas
+      for (let p of particulas) {
+        fill(p.color);
+        noStroke();
+        circle(p.x, p.y, p.r);
+        p.y += p.speed;
+        if (p.y > height) {
+          p.y = 0;
+          p.x = random(width);
+        }
       }
 
-      // Contador de clics
-      fill(255);
-      textSize(20);
-      textAlign(LEFT, TOP);
-      text("Clics: " + clickCount, 20, 20);
+      // Contador
+      if (iniciado && !borrandoFinal) {
+        fill(255);
+        textSize(20);
+        textAlign(LEFT, TOP);
+        text("Clics: " + clickCount, 20, 20);
+      }
 
-      // Lluvia de frases
-      if (!mostrarDedicatoria) {
+      // Lluvia
+      if (!mostrarDedicatoria && iniciado) {
         textAlign(CENTER, CENTER);
         textSize(24);
         if (frameCount % 8 === 0) {
@@ -196,7 +224,7 @@
         }
       }
 
-      // Dedicatoria con máquina de escribir y borrado
+      // Dedicatoria
       if (mostrarDedicatoria && !borrandoFinal) {
         if (!borrando && !esperando && millis() - tiempoEscritura > velocidadEscritura && indexLetra < textoBase.length) {
           textoVisible += textoBase[indexLetra];
@@ -207,6 +235,7 @@
         for (let parte of partesABorrar) {
           if (!parte.borrado && textoVisible.includes(parte.texto)) {
             borrarDesde = textoVisible.lastIndexOf(parte.texto);
+            borrarHasta = borrarDesde + parte.texto.length;
             esperando = true;
             tiempoEspera = millis();
             parte.borrado = true;
@@ -251,4 +280,3 @@
   </script>
 </body>
 </html>
-
